added guestbook link

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <center>
         <p>currently spreading <strong>manure</strong> 💩 everywhere to fertilize this garden 🌸</p>
         <p>check back soon babes 💞✨</p>
+        <br>
+        <p><a href="https://www.yourworldoftext.com/~emilie.txt/" target="_blank">guestbook 🖋️</a></p>
     </center>
   </body>
 </html>
